version 2.0-rc1 XX-Mar-2012
. [NEW] Actions: Added Catmull Rom By/To actions
. [NEW] CCConfiguration: logs in which thread the director is running (Mac only)
. [FIX] LabelBMFont: can be "init" without further arguments

version 2.0-rc0a 13-Mar-2012
. [FIX] PerformanceTest: Compiles and run
. [FIX] Tests: fixed shaders tests

version 2.0-rc0 12-Mar-2012
. [NEW] v1.1 Forward-ported changes:
		Actions: CCRepeat ends as expected (issue #1288)
		ColorLayer: incorrect size in init method
		Denshion: Background music fades ok (issue #1304)
		MenuItem: removed warning when deleting item
		ParticleSystem: prevent bursts of particles due to too high emitCounter (issue #1201)
		Sprite: fixed possible setColor and opacity
		TileMap: Flipped tiles can be changed during runtime (issue #1264)
		TileMap: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
		Types: Added convenience function to create a ccColor4F from color components
. [NEW] Actions: Added ActionTargeted action. Useful to target other nodes from a sequence.
. [NEW] Animation: Added new animation format that supports delays per frame, loops and notifications per frame
. [NEW] Deprecated: Added CC_ENABLE_DEPRECATED in ccConfig.h. All deprecated functions, methods and classed are included by default.
. [NEW] Director: When the stats are on, the number of GL draw calls per frame are displayed
		Added support for main-thread director (Mac only. Needed for some editors)
		Added KVO for isPaused (issue #1324)
. [NEW] DrawingPrimitives: Added ccDrawPoly() free function
. [NEW] LabelTTF: fontName, fontSize and dimensions are properties.
		It is possible to init one without parameters
. [NEW] LabelBMFont: added setFntFile method (issue #1119)
		Added support for image offset in order to share the texture (issue #762)
		Added support for any unicode char (issue #770)
		Consumes less memory. Only defined Glyphs are allocated.