@@ -33,6 +33,7 @@
 #import "ccGLStateCache.h"
 #import "CCShaderCache.h"
 #import "CCGLProgram.h"
+#import "CCActionCatmullRom.h"
 #import "Support/OpenGL_Internal.h"
 
 
@@ -263,6 +264,54 @@ void ccDrawQuadBezier(CGPoint origin, CGPoint control, CGPoint destination, NSUI
 	glDrawArrays(GL_LINE_STRIP, 0, (GLsizei) segments + 1);
 	
 	CC_INCREMENT_GL_DRAWS(1);
+}
+
+void ccDrawCatmullRom( CCCatmullRomConfig *config, NSUInteger segments )
+{
+
+	lazy_init();
+	
+	ccVertex2F vertices[segments + 1];
+
+	NSUInteger p;
+	CGFloat lt;
+	CGFloat deltaT = 1.0 / [config count];
+	
+	for( NSUInteger i=0; i < segments+1;i++) {
+		
+		CGFloat dt = (CGFloat)i / segments;
+	
+		// border
+		if( dt == 1 ) {
+			p = [config count] - 1;
+			lt = 1;
+		} else {
+			p = dt / deltaT;
+			lt = (dt - deltaT * (CGFloat)p) / deltaT;
+		}
+		
+		// Interpolate
+		CGPoint pp0 = [config getControlPointAtIndex:p-1];
+		CGPoint pp1 = [config getControlPointAtIndex:p+0];
+		CGPoint pp2 = [config getControlPointAtIndex:p+1];
+		CGPoint pp3 = [config getControlPointAtIndex:p+2];
+		
+		CGPoint newPos = ccCatmullRomAt( pp0, pp1, pp2, pp3,lt);
+		vertices[i].x = newPos.x;
+		vertices[i].y = newPos.y;
+	}
+	
+	[shader_ use];
+	[shader_ setUniformForModelViewProjectionMatrix];    
+	[shader_ setUniformLocation:colorLocation_ with4fv:(GLfloat*) &color_.r count:1];
+	
+	ccGLEnableVertexAttribs( kCCVertexAttribFlag_Position );
+	
+	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, vertices);
+	glDrawArrays(GL_LINE_STRIP, 0, (GLsizei) segments + 1);
+	
+	CC_INCREMENT_GL_DRAWS(1);
+
 }
 
 void ccDrawCubicBezier(CGPoint origin, CGPoint control1, CGPoint control2, CGPoint destination, NSUInteger segments)
