@@ -122,7 +122,11 @@
 @end
 
 @interface ActionCatmullRom : ActionDemo
-{}
+{
+	CCCatmullRomConfig *configCR1_;
+	CCCatmullRomConfig *configCR2_;
+
+}
 @end
 
 @interface ActionRepeatForever : ActionDemo
