@@ -1,6 +1,7 @@
 version 2.0-rc1 XX-Mar-2012
 . [NEW] Actions: Added Catmull Rom By/To actions
 . [NEW] CCConfiguration: logs in which thread the director is running (Mac only)
+. [NEW] DrawingPrimitives: added ccDrawCatmullRom
 . [FIX] LabelBMFont: can be "init" without further arguments
 
 version 2.0-rc0a 13-Mar-2012
